<resources>
    <string name="app_name">Rihanna Experts</string>
    <string name="phoneormail">Email </string>
    <string name="yourpass">Your password</string>
    <string name="signin">Sign In</string>
    <string name="plesesignin">Sign In to your Account</string>
    <string name="welvcome">Welcome to you</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="remeberlogin">Remember Login</string>
    <string name="youdonthavaccount">You do not have account , Create it Now </string>
    <string name="signup">Register New Account</string>
    <string name="next">Next</string>
    <string name="personalinfo">Personal Info</string>
    <string name="registernewaccount">Register New Account</string>
    <string name="fristname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailhintinputlogin">Email</string>
    <string name="phonehintinputlogin">Phone Number </string>
    <string name="passwordhintinputlogin">Password</string>
    <string name="repasswordhintinputlogin">Re-Password</string>
    <string name="addressinfo">Address / Location</string>
    <string name="buldingnum">Building Number Or Street</string>
    <string name="negborhoodordistrict">Neighbourhood Or District</string>
    <string name="locationdetict">Detect Location</string>
    <string name="experincs">Practical experience</string>
    <string name="aboutexpert">About Beauty expert</string>
    <string name="expertyears">Number Of Experience Years</string>
    <string name="certificates">Certificates</string>
    <string name="add">Add</string>
    <string name="clicktoadd">Click To Add</string>
    <string name="cert">Certificate</string>
    <string name="specialty">Specialty</string>
    <string name="grantor">Granter</string>
    <string name="certyear">Year of Grants</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hometitle">Main Page</string>
    <string name="noorders">No Orders</string>
    <string name="mangeorders">Mange Orders</string>
    <string name="order">Order</string>
    <string name="outservice">Outdoor Service</string>
    <string name="accept">Accept</string>
    <string name="dicline">Reject</string>
    <string name="orderaccepted">Request Completed</string>
    <string name="showonmap">Show Location On Map</string>
    <string name="customerinfo">Customer Info</string>
    <string name="time">The appointment</string>
    <string name="rateus">Please rate our services</string>
    <string name="daydates">Today appointments</string>
    <string name="mangeoffers">Mange Offers</string>
    <string name="datestable">Schedule</string>
    <string name="accountmange">Mange My Account</string>
    <string name="mangeworkflow">Work Schedule</string>
    <string name="mangeservicesand"><![CDATA[My Services & Offers]]></string>
    <string name="applang">Application Language</string>
    <string name="settings">Settings</string>
    <string name="polcies">Policies</string>
    <string name="subwayes">Ways to subscribe</string>
    <string name="complains">Communicate with the app management</string>
    <string name="userhintinputlogin">First Name</string>
    <string name="comptext">Complaints Text ...</string>
    <string name="send">Send</string>
    <string name="aboutapp">About Rihanna App</string>
    <string name="haveaccount">Have Account - Login</string>
    <string name="sendcode">Send Code</string>
    <string name="codeinput">Mobile Verification Code</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish Registration</string>
    <string name="services">Services</string>
    <string name="mangemyaccount">Mange My Account</string>
    <string name="exp">Experiences</string>
    <string name="info">Expert</string>
    <string name="address">Address</string>
    <string name="expaddress">Address</string>
    <string name="outdoraddress">Outdoor Address</string>
    <string name="practexp">Practical Experiences</string>
    <string name="noservices">No Services</string>
    <string name="showschadule">Preview Schedule</string>
    <string name="setschadule">Work Times</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areyousurexiteapp">Exit From App ?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="verifiycode">Verification Code</string>
    <string name="worktimes">Working Times</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="certnameerr">Please Add Certificate Name</string>
    <string name="certyearerr">Please Add Year of Grant</string>
    <string name="grantererr">Please Add Granter</string>
    <string name="spiciltyerr">Please select Specialty</string>
    <string name="addcertsucsess">Certificate has been added successfully</string>
    <string name="loading">Loading</string>
    <string name="certupdated">Certificate has been updated</string>
    <string name="removecert">Certificate has been deleted</string>


    <string name="fnameerr">First Name required</string>
    <string name="lnameerr">Last Name required</string>
    <string name="emailerr">Email required</string>
    <string name="phonenumerr">Phone Number required</string>
    <string name="passworderr">Password required</string>
    <string name="repasserr">Re Password required</string>
    <string name="activcodeerr">Activation Code required</string>
    <string name="emailnotmatcherr">Invalid Email</string>
    <string name="phonenotmatcherr">Invalid Phone Number (e.g : 966555544444)</string>
    <string name="passwordnotmatch">Passwords Not Matches</string>

    <string name="category">Services Category</string>
    <string name="service">Service</string>
    <string name="price">Price</string>
    <string name="priceafterdecount">Discount amount</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="sr">S.R</string>
    <string name="aboutexperterrr">Insert Your Info </string>
    <string name="experyearscounterr">Set Your Experiences Years</string>
    <string name="sucsess">Success</string>
    <string name="updated">Updated Successfully</string>
    <string name="clearexp">Clear Experiences</string>
    <string name="deleted">Deleted</string>
    <string name="suscribesucsess">Service has been Subscribed</string>
    <string name="insertprice">Insert Service Price</string>
    <string name="insertdescount">Insert Discount Amount</string>
    <string name="categorieserr">Select Category</string>
    <string name="serviceerr">Select Service</string>
    <string name="discountvalue">Disc/Amount</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="ordernum">Order Number</string>
    <string name="servicetype">Request status</string>
    <string name="ordercompleted">Set Order Completed</string>
    <string name="canceld">Order Canceled</string>
    <string name="accepted">Order Accepted</string>
    <string name="orderfinished">Order Finished</string>
    <string name="registersucsess">Registration Successfully</string>
    <string name="loginsucsess">Login Successfully</string>
    <string name="notimes">No Times</string>
    <string name="fromto">Cannot Select To before From</string>
    <string name="day">Day</string>
    <string name="insertday">Day Required</string>
    <string name="insertfrom">Time From Required</string>
    <string name="insertto">Time To Required</string>
    <string name="city">City</string>
    <string name="addr1">Address </string>
    <string name="addr2">Address 2</string>
    <string name="addr1req">Address 1 required</string>
    <string name="addr2req">Address 2 required</string>
    <string name="cityreq">City required</string>
    <string name="addphoto">Add Image</string>
    <string name="noImages">No Images</string>
    <string name="imgs">Photos</string>
    <string name="indoorservice">Service is in the expert center</string>
    <string name="addoutdooraddress">Add Outdoor Address</string>
    <string name="noaddress">No Outdoor Addresses</string>
    <string name="nabourhode">Neighbourhood</string>
    <string name="indor">Indoor Service</string>
    <string name="outdor">Outdoor Service</string>
    <string name="addnewadd">Add New Outdoor Address</string>

    <string name="indoortrue">You are Now Present Indoor Service</string>
    <string name="indoorfalse">You are Now Not Present Indoor Service</string>
    <string name="discountaccess">Discounts are added by Rihanna Administration for this account</string>
    <string name="total">Total Price</string>
    <string name="paymentstaus">Payment Status</string>
    <string name="notset">Not Set</string>
    <string name="phonenum">+966565161868</string>
    <string name="camera">Camera</string>
    <string name="gallery">Photos Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="areyousure">Confirm ?</string>
    <string name="pending">Pending</string>
    <string name="procissing">Processing</string>
    <string name="completed">Completed</string>
    <string name="canceldd">Canceled</string>
    <string name="completedorders">Completed</string>
    <string name="pendingorders">Pending</string>
    <string name="processingorders">Accepted</string>
    <string name="canceldorders">Canceled</string>
    <string name="timebusy">Sorry This Time Is Reserved Please Choose another time</string>
    <string name="messagesent">Message has been Sent Successfully</string>
    <string name="cannotsetzero">Service Price can not be 0</string>
    <string name="vendorname">Nickname</string>
    <string name="nameerr">Please Add Nickname</string>
    <string name="connectionerror">Connection Error</string>
    <string name="connectionerr">Please Check Your Internet Connection .. !</string>
    <string name="dismiss">Dismiss</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="notifiction">You Have New </string>
    <string name="ordersnot">Orders</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_about_app_frag" translatable="false">AboutAppFrag</string>
    <string name="title_activity_recover_password" translatable="false">RecoverPassword</string>
    <string name="newpasswillsend">New Default Password will send in SMS shortly</string>
    <string name="serviceexistes">This service already Subscribed</string>

    <string name="rihannadisc">Rihanna is a Application for creating the best way for searching for Beauty Experts and increase facility of the process of finding , contacting them and reserve services</string>
    <string name="termsheder">These Terms of Use consist of the terms and conditions below</string>
    <string name="role1">Rihanna Application belongs to the Rihanna Company and does not allow to simulate or imitate it</string>
    <string name="role2">Ensure that all expert data are legally valid</string>
    <string name="role3">Dealing professionally with clients and keeping their privacy</string>
</resources>
