<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpScreen"
    android:background="@drawable/login_bg"
    android:layoutDirection="ltr">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signin"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="#ffffff" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:id="@+id/customerlocation_input_data_box"
        android:layout_below="@+id/linearLayout32"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputemail"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView5"
                android:layout_weight="6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/email_input_login"
                android:background="#00ffffff"
                android:padding="6dp"
                android:gravity="center|start"
                android:textAlignment="viewStart"
                android:hint="@string/phoneormail"
                android:layout_weight="1"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputpassword"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView3"
                android:layout_weight="6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:id="@+id/password_input_login"
                android:background="#00ffffff"
                android:padding="6dp"
                android:textAlignment="viewStart"
                android:hint="@string/yourpass"
                android:layout_weight="1"
                android:textSize="13dp"
                android:inputType="textPassword"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="15dp"
            android:typeface="serif"
            android:id="@+id/login_btn">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout32">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/welvcome"
            android:id="@+id/textView2"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:typeface="serif"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/plesesignin"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerlocation_input_data_box"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forgetpass"
            android:id="@+id/forgetpassbtn"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="false" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remeberlogin"
            android:id="@+id/remeberlogincheck"
            android:layout_weight="1"
            android:checked="false"
            android:textAlignment="viewStart"
            android:textSize="15dp"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/youdonthavaccount"
        android:id="@+id/create_account_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

</RelativeLayout>