<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linearLayout9"
        android:layout_below="@+id/close"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d8d8d8">

            <EditText
                android:id="@+id/cert_name_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/cert"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="15sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d8d8d8"
            android:layout_marginTop="10dp">

            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/spicialty_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/specialty"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="15sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d8d8d8"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/granter_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/grantor"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="15sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d8d8d8"
            android:layout_marginTop="10dp">

            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/year_of_grant_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="1dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/certyear"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="15sp" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/close"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout9"
        android:padding="3dp"
        android:src="@android:drawable/ic_delete"
        android:layout_margin="8dp" />

</RelativeLayout>