<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegistrationFragments.RegPersonalInfo"
    android:background="@drawable/login_bg">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/count3"
        android:padding="10dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linearLayout"
        android:padding="5dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/experincs"
            android:id="@+id/textView"
            android:layout_weight=".8"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="13dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"></LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/reject_btn"
        android:id="@+id/cert_list_contenner">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cert_list">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/empty_list_flag">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d8d8d8">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/clicktoadd"
                android:id="@+id/textView8"
                android:textSize="15dp"
                android:padding="5dp"
                android:background="#eaeaea"
                android:textColor="#606060" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d8d8d8"></LinearLayout>
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/next"
        android:id="@+id/reject_btn"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout7">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#d8d8d8">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/about_expert_input"
                android:autoText="false"
                android:background="#ffffff"
                android:layout_margin="2dp"
                android:gravity="top"
                android:padding="5dp"
                android:hint="@string/aboutexpert"
                android:textSize="15dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d8d8d8"
            android:layout_marginTop="10dp">
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="#ffffff"
                android:padding="5dp"
                android:hint="@string/expertyears"
                android:id="@+id/exper_years_count"
                android:textSize="15dp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linearLayout8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/certificates"
            android:id="@+id/textView5"
            android:textSize="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/add_cert_btn">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add"
                android:id="@+id/textView6"
                android:textSize="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="+"
                android:id="@+id/textView7"
                android:textSize="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>